Sun Jan 25 21:04:37 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Re-enabled server shutdown.

        * cuts/utils/testing/svcs/server/TestManager_i.cpp:
        * cuts/utils/testing/svcs/server/server.mpc:

          . Bug fix where the manager was using the incorrect UUID. Now,
            it get the test UUID from the database profile

Sun Jan 25 20:02:45 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Testing_App.cpp:

          . Added debug output for the shutdown timeout.

Sun Jan 25 16:37:18 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Test_Options.h:
        * cuts/utils/testing/Testing_App.cpp:

          . Added support for shutdown timeout to prevent the test
            from running indefinitely.

        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Temporarily disable server shutdown until we can find out
            where the race conditions are.

Sun Jan 25 15:44:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test-all.sh:

          . Removed the sleep time from the script.

Sun Jan 25 15:39:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test-all.sh:
        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test.sh:

          . Improved the scripts for running all the tests.

Sun Jan 25 15:35:49 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/client/TestLoggerClient_i.cpp:
        * cuts/utils/logging/client/TestLogger_i.cpp:
        * cuts/utils/logging/server/TestLoggerServer_i.cpp:

          . Simplied the complexity of the code.

          . Added more exception handling, and debug messages.

        * cuts/workers/Test_Logger/TestLogger.xme: